k8s/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: k8s-demo
  labels:
    app: k8s-demo
spec:
  replicas: 3 # レプリケーションの増減数
  selector:
    matchLabels:
      app: k8s-demo
  template:
    metadata:
      labels:
        app: k8s-demo
    spec:
      containers:
        - name: k8s-demo
          image: xxx
          ports:
            - containerPort: 3000
