k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-demo-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
  nodeSelector:
    disktype: ssd
