k8s/ingress-apps.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-ingress-svc-1
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: k8s-demo-ingress-1
---
apiVersion: v1
kind: Pod
metadata:
  name: k8s-demo-ingress-apps-1
  labels:
    ingress-app: k8s-demo-ingress-1
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-ingress-svc-2
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: k8s-demo-ingress-2
---
apiVersion: v1
kind: Pod
metadata:
  name: k8s-demo-ingress-apps-2
  labels:
    ingress-app: k8s-demo-ingress-2
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-ingress-svc-default
spec:
  type: NodePort
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8888
      targetPort: 80
  selector:
    ingress-app: k8s-demo-ingress-default
---
apiVersion: v1
kind: Pod
metadata:
  name: k8s-demo-ingress-apps-default
  labels:
    ingress-app: k8s-demo-ingress-default
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
      ports:
        - containerPort: 80
