k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
  namespace: default
  labels:
    app: k8s-demo-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # targetPort: 3000
  selector:
    app: k8s-demo-deploy
  type: LoadBalancer
  loadBalancerIP: ""
